Moved var declarations to top of chassis.scss and added sticky footer overlap fix to showroom

--- a/showroom/sass/main.scss
+++ b/showroom/sass/main.scss
@@ -11,6 +11,8 @@
 // @import 'plugins/detailer/ui-components/tiles';
 
 .showroom {
+  // Account for sticky footer
+  padding-bottom: 3em;
 
   .modal {
     align-self: flex-start;
